# torchtrader

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/workflows/: actions_vars.yml  build.yml  mkdocs.yml  orchestrator.yml  release.yml  semantic_pull_request.yml  tests.yml
app/api/: index.html
app/schemas/: index.html
config/config/: index.html
data/: test.db  torchtrader.db
data/database/: index.html
definition/: index.html
docs/: definition.md  getting_started.md  index.md  requirements.txt
docs/app/: schemas.md
docs/config/: config.md
docs/data/: database.md
docs/project/: architecture.md  deployment.md  design_detailed.md  dev_docs.md  plan.md  requirements.md  scope.md  support.md  testing.md  use_case.md  user_docs.md
docs/ta/: ichimoku.md  ma.md  rsi.md
docs/torchtrader/: data.md  eval.md
getting_started/: index.html
notebooks/: 0-start.ipynb  00-scratches.ipynb
project/architecture/: index.html
project/design_detailed/: index.html
project/dev_docs/: index.html
project/plan/: index.html
project/proposal/: index.html
project/requirements/: index.html
project/support/: index.html
project/testing/: index.html
project/user_docs/: index.html
references/: refs.md
reports/: report01.md
search/: search_index.json
src/torchtrader/: app.py  code_file.py
src/torchtrader/data/: example01.py
src/torchtrader/evaluate/: example02.py
src/torchtrader/ta/: ichimoku.py  ma.py  rsi.py
ta/ichimoku/: index.html
ta/ma/: index.html
ta/rsi/: index.html
tests/: conftest.py  test_code_file.py  test_database.py  test_ema.py  test_ichimoku.py  test_ma.py  test_macd.py  test_ops_specific.py  test_rsi.py
torchtrader/: app.py  utils.py
torchtrader/data/: collection.py  database.py  example01.py  example_database.py  index.html  ops_specific.py  schema.py  torchtrader.db
torchtrader/eval/: index.html
torchtrader/examples/: example_collection.py  example_database.py
torchtrader/logs/: logger.py
torchtrader/models/: index.html
torchtrader/operations/: index.html
torchtrader/prediction/: index.html
torchtrader/ta/: ema.py  ichimoku.py  ma.py  macd.py  rsi.py
torchtrader/training/: index.html
torchtrader/utils/: index.html
