[build-system]
requires = ["setuptools>=61.2.0", "wheel", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
# build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=my_project"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.poetry]
name = "my-project"
version = "0.1.0"
description = "Project template"
authors = ["Josep Oriol Ayats <oriol.ayats@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
setuptools = ">=61.2.0"
markdown-include = ">=0.6.0"
mkdocs = ">=1.3.0"
mkdocs-material = ">=8.2.15"
mkdocstrings = ">=0.18.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.2"
black = "*"
pipenv-to-requirements = "*"
pre-commit = "*"
pylint = "*"
