[tool.poetry]
name = "torchtrader"
version = "0.1.0"
description = "Automated trading framework built on top of DL models"
authors = ["joseporiolayats <oriol.ayats@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"
mkdocstrings = "^0.20.0"
pymdown-extensions = "^9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
