[tool.poetry]
name = "torchtrader"
version = "0.1.0"
description = "Automated trading framework built on top of DL models"
authors = ["Josep Oriol Ayats <oriol.ayats@gmail.com>"]
readme = "README.md"
documentation = "https://joseporiolayats.github.io/torchtrader"
repository = "https://github.com/joseporiolayats/torchtrader"
keywords = ["trading","bots","markets"]
packages = [{include = "src/torchtrader" }]

[tool.poetry.dependencies]
python = "^3.10"
python-semantic-release = "^7.33.2"
pre-commit = "^3.2.1"
#numba = "^0.56.4"
#torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.0.0%2Bcu118-cp310-cp310-linux_x86_64.whl"}
torch = "^2.0.0"
jupyter = "^1.0.0"
ruff = "^0.0.260"

[tool.poetry.group.lint.dependencies]
isort = "^5.10.1"
black = "^22.8.0"
flake8 = "^5.0.4"
mypy = "^0.971"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-sugar = "^0.9.5"
pytest-cov = "^4.0.0"
respx = "^0.20.0"
pytest-asyncio = "^0.19.0"
trio = "^0.22.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.6"
pymdown-extensions = "^9.10"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.3"
mkdocs-mermaid2-plugin = "^0.6.0"


[tool.poetry.group.semver.dependencies]
python-semantic-release = "^7.32.2"

[tool.isort]
profile = "black"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
# 3rd party import
ignore_missing_imports = true
# dynamic typing
disallow_any_unimported = false #true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_generics = false
disallow_subclassing_any = false #true
# platform
python_version = "3.10"
# untyped
disallow_untyped_calls = true
disallow_untyped_defs = false #true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# None and Optional
no_implicit_optional = true
# Warnings
warn_return_any = false
warn_unreachable = true
# Misc
pretty = true

[mypy-numpy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
addopts = "-p no:cacheprovider" # deactivating pytest caching.

[tool.coverage.report]
exclude_lines = [
    'if __name__ == "__main__":'
]

[tool.semantic_release]
branch = "main"
version_variable = "src/torchtrader/__init__.py:__version__"
version_toml = "pyproject.toml:tool.poetry.version"
version_source = "tag"
commit_version_number = true # required for version_source = "tag"
commit_message = "{version} [skip ci]" # skip triggering ci pipelines for version commits
tag_commit = true
upload_to_pypi = false
upload_to_release = false
hvcs = "github" # gitlab is also supported (hvcs = host version control system)

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
